--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongojs": "^2.6.0",
+    "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
   }
