--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongojs": "^2.6.0",
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pdfkit": "^0.9.1"
   }
 }
