--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
+    "blob-stream": "^0.1.3",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongojs": "^2.6.0",
