--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.6.3",
+    "react-images-upload": "^1.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.1"
   },
