--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.7"
   },
+  "engines": {
+    "node": "12.1.0"
+  },
   "dependencies": {
     "auth0-js": "^9.10.2",
     "axios": "^0.18.0",
