--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.6.3",
