--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.18.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "moment": "^2.24.0",
     "mongojs": "^2.6.0",
     "mongoose": "^5.5.9",
     "morgan": "^1.9.1",
